--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="36dp"
             android:layout_height="26dp"
             android:layout_margin="24dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/ic_weight"
             android:tint="@color/white" />
 
