--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:text="Calculador IMC"
+            android:text="IMC Calculator"
             android:textColor="@color/white"
             android:textSize="24dp"
             android:textStyle="bold" />
@@ -40,7 +40,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
 
-            android:text="Confirme abaixo o seu resultado e classificação"
+            android:text="Bevestig hieronder uw resultaat en classificatie."
             android:textColor="@color/white" />
 
         <TextView
@@ -64,13 +64,13 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="48dp"
         android:layout_height="wrap_content"
-        android:text="Your IMC classification is: " />
+        android:text="Uw IMC-classificatie is: " />
 
     <TextView
         android:id="@+id/tv_classificacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:text="Normal"
+        android:text="NORMAAL"
         android:textStyle="bold" />
 </LinearLayout>
